# Projeto_Complexidade_Algoritmos

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  PERFORMANCE_CACHE_FIX.md  README.md  SUMMARY.md  docker-compose.yml  ex.py  input.json  main.py  output.json  package.json  patch_cache_integration.py  pyproject.toml  requirements.txt  route_map.html  temp_output.txt  turbo.json  visualize_route.py
alembic/: env.py
alembic/versions/: e038dac880c3_criacao_das_tabelas_de_fatores_e_gtfs.py
app/: config.py  database.py  main.py
app/controllers/: routes.py
deploy/: Dockerfile  docker-compose.yml  docker-entrypoint.sh
docs/: ALGORITHMS.md  ARCHITECTURE.md  DATA.md  arquitetura-comparativo.excalidraw  rotas-recife.postman_collection.json
documentation/: ANALISE_QUESTOES_E_ALINHAMENTO.md  ANALISE_QUESTOES_E_ALINHAMENTO_V2.md  APRESENTACAO_MELHORIA_CACHE.md  ARCHITECTURE.md  FUNCIONAMENTO_ATUAL.md  GUIA_IMPLEMENTACAO_MELHORIAS.md  MELHORIAS_APLICACOES.md  QUICKSTART.md  RESPOSTAS_QUESTIONARIO_REFINAMENTO.md  WEB_QUICKSTART.md  documento completo do projeto - reduzido.md  documento completo do projeto.md  escopo-projeto-exemplo.md  resposta-final.md
dumps/: README.md  seed_factors.sql
frontend/: package-lock.json
graph/: __init__.py  cost_calculator.py  graph_builder.py  graph_cache_utils.py  normalizer.py  risk_calculator.py
loaders/: csv_loader.py  weather_api.py
routing/: __init__.py  astar_multimodal.py  dijkstra_multimodal.py  path_reconstructor.py
src/: otimizacao_rotas_recife.py  visualizacao_grafo.py
tests/: test_calculate.py
(+85 files in other folders)
