[project]
name = "rotas-recife-backend"
version = "0.1.0"
description = "Backend do motor de rotas multimodais da Regiao Metropolitana do Recife"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.22",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
]

[project.scripts]
load-data = "app.loaders.csv_loader:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
